20060729 fuse.c: reenable sound in fuse_emulation_unpause (Fred).
20060730 z80/z80.c: IM 0 takes 13 tstates to acknowledge (partial fix for
	 bug #1526868).
20060730 z80/{z80.pl,z80_macros.h}: add IR contention (thanks, Mark Woodmass)
	 (patch #1527439).
20060730 z80/tests/{[0123][39b],10,[cdef][08]_[12],[cdef]5,[cdef][7f],f9,
	 [df]d{[0123]9,2[3b],e5,f9},ed{[4567][2a],[45][7f],[ab][23ab]}}.
	 {in,out}: update tests for IR contention.
20060730 Makefile.am,loader.[ch],menu.c,settings.dat,spectrum.c,tape.[ch],
	 ula.c,lib/{un,}compressed/tape_{16,48,128,plus2,pentagon,scorpion,
	 2048,ts2068}.szx,ui/options.dat: loader detection (patch
	 #1511906).
20060730 tape.c: don't use tape traps unless we're at the very start of a
	 ROM block (partial fix for bug #1531346).
20060806 z80/z80_macros.h,z80/tests/{*cb*,README}: bits 3 and 5 of the value
	 are copied to F on all BIT instructions, not just BIT 3,r and BIT 5,r
	 (thanks Mark Woodmass for testing on a real machine).
20060806 profile.c: ensure changes in profiling state are picked up by the
	 main loop (fixes bug #1530345).
20060806 tape.c: make actually starting the tape the very last action in
	 tape_play(), as this can cause the tape to stop again which can
	 lead to our internal state becoming inconsistent.
20060812 tape.c: ensure tapes with multiple metadata blocks use traps
	 correctly (see bug #1531346).
20060812 tape.c: don't use tape traps when loading part of a block (Technician
	 Ted as part of bug #1531346).
20060814 ui/sdl/sdldisplay.c: fix tape icon display before a tape is played
         (Fred).
20060823 menu.c,menu_data.c,trdos.h,ui/gtk/gtkui.c: add support for up to four
         drives and four interfaces in the UI 
	 (patch #1145082) (Stuart Brady).
20060825 man/fuse.1: fix typo (Stuart Brady).
20060825 TAG: Release-0_7_0-trunk-1
20060825 BRANCH: Release-0_7_0-disciple-branch
20060825 display.c: don't extend rects past the end of the screen (fixes bug
         #1304939) (Fred).