@@ -398,7 +398,8 @@ specplus3_memory_map( void )
   /* If we changed the active screen, mark the entire display file as
      dirty so we redraw it on the next pass */
   if( memory_current_screen != screen ) {
-    display_refresh_all();
+    display_update_critical( 0, 0 );
+    display_refresh_main_screen();
     memory_current_screen = screen;
   }
 
