@@ -1,5 +1,5 @@
 /* scld.c: Routines for handling the Timex SCLD
-   Copyright (c) 2002-2004 Fredrick Meunier, Philip Kendall, Witold Filipczyk
+   Copyright (c) 2002-2006 Fredrick Meunier, Philip Kendall, Witold Filipczyk
 
    $Id$
 
@@ -61,18 +61,26 @@ void
 scld_dec_write( libspectrum_word port GCC_UNUSED, libspectrum_byte b )
 {
   scld old_dec = scld_last_dec;
+  scld new_dec;
   libspectrum_byte ink,paper;
 
-  scld_last_dec.byte = b;
+  /* We use new_dec as we don't want to have the new colours, modes etc.
+     to take effect until we have updated the critical region */
+  new_dec.byte = b;
 
   /* If we changed the active screen, or change the colour in hires
-   * mode mark the entire display file as dirty so we redraw it on
-   * the next pass */
-  if((scld_last_dec.mask.scrnmode != old_dec.mask.scrnmode)
-       || (scld_last_dec.name.hires &&
-           (scld_last_dec.mask.hirescol != old_dec.mask.hirescol))) {
-    display_refresh_all();
+   * mode, update the critical region and mark the entire display file as
+   * dirty so we redraw it on the next pass */
+  if( new_dec.mask.scrnmode != old_dec.mask.scrnmode ||
+      new_dec.name.hires != old_dec.name.hires ||
+      ( new_dec.name.hires &&
+           ( new_dec.mask.hirescol != old_dec.mask.hirescol ) ) ) {
+    display_update_critical( 0, 0 );
+    display_refresh_main_screen();
   }
+
+  /* Commit change to scld_last_dec */
+  scld_last_dec = new_dec;
 
   /* If we just reenabled interrupts, check for a retriggered interrupt */
   if( old_dec.name.intdisable && !scld_last_dec.name.intdisable )
